GH-3306: Convert jena-arq tests to JUnit5